--- a/blog/papers/2019/0403.md
+++ b/blog/papers/2019/0403.md
@@ -33,7 +33,7 @@ GAN在生成离散序列token数据时有它本身的局限性。一个主要的
 
 ## Sequence Generative Adversarial Nets
 
-序列生成问题标记如下。给定一个真实的结构化序列数据集，训练一个参数为$\theta$的生成模型$G_\theta$，使其生成一个序列$Y_{1 : T}=\left(y_{1}, \dots, y_{t}, \ldots, y_{T}\right), y_{t} \in \mathcal{Y}$，其中$\mathcal{Y}$是候选token。我们基于强化学习来解释这个问题。在时间$t$，状态s是当前产生的token:$\left(y_{1}, \dots, y_{t-1}\right)$，a是下一个token$y_t$选择的行为。因此策略模型$G_{\theta}\left(y_{t} | Y_{1 : t-1}\right)$是随机的，其中状态转换在下一个行为选择后是确定的，即如果当前状态$s=Y_{1 : t-1}$，行为是$a=y_{t}$，下一个状态为$s^{\prime}=Y_{1 : t}$，那么$\delta_{s, s^{\prime}}^{a}=1$。对于下面的状态$\mathcal{S}^{\prime \prime}$为：$\delta_{s, s^{\prime \prime}}^{a}=0$。
+序列生成问题标记如下。给定一个真实的结构化序列数据集，训练一个参数为$\theta$的生成模型$G_\theta$，使其生成一个序列$Y_{1 : T}=\left(y_{1}, \dots, y_{t}, \ldots, y_{T}\right), y_{t} \in \mathcal{Y}$，其中$\mathcal{Y}$是候选token。我们基于强化学习来解释这个问题。在时间$t$，状态s是当前产生的token:$\left(y_{1}, \dots, y_{t-1}\right)$，a是下一个token$y_t$选择的行为。因此策略模型$G_{\theta}\left(y_{t} \vert Y_{1 : t-1}\right)$是随机的，其中状态转换在下一个行为选择后是确定的，即如果当前状态$s=Y_{1 : t-1}$，行为是$a=y_{t}$，下一个状态为$s^{\prime}=Y_{1 : t}$，那么$\delta_{s, s^{\prime}}^{a}=1$。对于下面的状态$\mathcal{S}^{\prime \prime}$为：$\delta_{s, s^{\prime \prime}}^{a}=0$。
 
 另外，我们同样训练一个参数为$\phi$的判别模型$D_{\phi}$为生成模型$G_\theta$提供指导。$D_{\phi}\left(Y_{1 : T}\right)$表示$Y_{1 : T}$来自真实数据与否的概率。如图1所示，判别器模型$D_{\phi}$由来自真实序列数据的正样本和生成模型$G_\theta$生成合成数据的负样本训练。同时，生成模型$G_\theta$通过采用策略梯度和基于判别模型$D_{\phi}$期望奖励的MC搜索来更新。奖励是通过骗过判别模型$D_{\phi}$的似然来预测的。
 
@@ -41,9 +41,9 @@ GAN在生成离散序列token数据时有它本身的局限性。一个主要的
 
 ### SeqGAN via Policy Gradient
 
-由Sutton可知，当没有中间奖励的时候，生成模型（策略）$G_{\theta}\left(y_{t} | Y_{1 : t-1}\right)$的目标是从一个起始状态$s_0$生成最大化期望奖励的序列：
+由Sutton可知，当没有中间奖励的时候，生成模型（策略）$G_{\theta}\left(y_{t} \vert Y_{1 : t-1}\right)$的目标是从一个起始状态$s_0$生成最大化期望奖励的序列：
 
-$$J(\theta)=\mathbb{E}\left[R_{T} | s_{0}, \theta\right]=\sum_{y_{1} \in \mathcal{Y}} G_{\theta}\left(y_{1} | s_{0}\right) \cdot Q_{D_{\phi}}^{G_{\theta}}\left(s_{0}, y_{1}\right), \qquad (1)$$
+$$J(\theta)=\mathbb{E}\left[R_{T} \vert s_{0}, \theta\right]=\sum_{y_{1} \in \mathcal{Y}} G_{\theta}\left(y_{1} \vert s_{0}\right) \cdot Q_{D_{\phi}}^{G_{\theta}}\left(s_{0}, y_{1}\right), \qquad (1)$$
 
 其中$R_{T}$是完整序列的奖励。注意到奖励是来自于判别器$D_{\phi}$的。$Q_{D_{\phi}}^{G_{\theta}}(s, a)$是序列的action-value函数，即从状态$s$开始，采取行为$a$,遵循策略$G_\theta$的期望累积奖励。序列目标函数的原理是给定一个初始状态，生成器的目标是生成可以让判别器认为真实的序列。
 
@@ -57,7 +57,7 @@ $$\left\{Y_{1 : T}^{1}, \ldots, Y_{1 : T}^{N}\right\}=\mathrm{MC}^{G_{\beta}}\le
 
 其中$Y_{1 : t}^{n}=\left(y_{1}, \dots, y_{t}\right)$，$Y_{t+1 : T}^{n}$是基于roll-out策略$G_{\beta}$和当前状态的采样。在我们的实验中，$G_{\beta}$和生成器设置的一样，如果要求速度的话可以使用简单的版本。为了减少方差，得到更准确的action值，我们从当前状态开始到序列结束运行roll-out策略N次，来得到一个batch的输出样本。这样，我们有：
 
-$Q_{D_{\phi}}^{G_{\theta}}\left(s=Y_{1 : t-1}, a=y_{t}\right)=\left\{\begin{array}{ll}{\frac{1}{N} \sum_{n=1}^{N} D_{\phi}\left(Y_{1 : T}^{n}\right), Y_{1 : T}^{n} \in \mathrm{MC}^{G_{\beta}}\left(Y_{1 : t} ; N\right)} & {\text { for } t<T} \\ {D_{\phi}\left(Y_{1 : t}\right)} & {\text { for } t=T}\end{array}\right. \qquad (4)$
+$$Q_{D_{\phi}}^{G_{\theta}}\left(s=Y_{1 : t-1}, a=y_{t}\right)=\left\{\begin{array}{ll}{\frac{1}{N} \sum_{n=1}^{N} D_{\phi}\left(Y_{1 : T}^{n}\right), Y_{1 : T}^{n} \in \mathrm{MC}^{G_{\beta}}\left(Y_{1 : t} ; N\right)} & {\text { for } t<T} \\ {D_{\phi}\left(Y_{1 : t}\right)} & {\text { for } t=T}\end{array}\right. \qquad (4)$$
 
 可以看到，当没有中间的奖励时，函数由从状态$s^{\prime}=Y_{1 : t}$开始，到rolling out结束的过程中迭代定义。
 
@@ -89,7 +89,7 @@ $$\theta \leftarrow \theta+\alpha_{h} \nabla_{\theta} J(\theta) \qquad (8)$$
 
 ### The Generative Model for Sequences
 
-我们使用RNN作为生成模型。一个RNN使用更新函数g递归的把序列$x_{1}, \dots, x_{T}$输入嵌入表示$\boldsymbol{x}_{1}, \dots, \boldsymbol{x}_{T}$映射到隐藏状态$\boldsymbol{h}_{1}, \dots, \boldsymbol{h}_{T}$：
+我们使用RNN作为生成模型。一个RNN使用更新函数g递归的把序列$x_{1}, \dots, x_{T}$输入嵌入表示`$\boldsymbol{x}_{1}, \dots, \boldsymbol{x}_{T}$`映射到隐藏状态`$\boldsymbol{h}_{1}, \dots, \boldsymbol{h}_{T}$`：
 
 $$\boldsymbol{h}_{t}=g\left(\boldsymbol{h}_{t-1}, \boldsymbol{x}_{t}\right) \qquad (9)$$
 
@@ -107,21 +107,21 @@ $$p\left(y_{t} | x_{1}, \ldots, x_{t}\right)=z\left(\boldsymbol{h}_{t}\right)=\o
 
 $$\mathcal{E}_{1 : T}=\boldsymbol{x}_{1} \oplus \boldsymbol{x}_{2} \oplus \ldots \oplus \boldsymbol{x}_{T} \qquad (11)$$
 
-其中$\boldsymbol{x}_{t} \in \mathbb{R}^{k}$是k维token嵌入，$\oplus$是拼接运算来构建矩阵$\mathcal{E}_{1 : T} \in \mathbb{R}^{T \times k}$。然后$\boldsymbol{w} \in \mathbb{R}^{l \times k}$核在l词大小的窗口上来做卷积运算来产生新的特征图：
+其中`$\boldsymbol{x}_{t} \in \mathbb{R}^{k}$`是k维token嵌入，$\oplus$是拼接运算来构建矩阵`$\mathcal{E}_{1 : T} \in \mathbb{R}^{T \times k}$`。然后$\boldsymbol{w} \in \mathbb{R}^{l \times k}$核在l词大小的窗口上来做卷积运算来产生新的特征图：
 
 $$c_{i}=\rho\left(\boldsymbol{w} \otimes \mathcal{E}_{i : i+l-1}+b\right) \qquad (12)$$
 
-其中$\otimes$是元素间运算的和，b是偏置项，$\rho$是非线性函数。我们可以使用不同数量的核搭配不同大小的窗口来提取不同的特征。最后在特征图上执行一个max-over-time的池化操作：$\tilde{c}=\max \left\{c_{1}, \ldots, c_{T-l+1}\right\}$。
+其中$\otimes$是元素间运算的和，b是偏置项，$\rho$是非线性函数。我们可以使用不同数量的核搭配不同大小的窗口来提取不同的特征。最后在特征图上执行一个max-over-time的池化操作：`$\tilde{c}=\max \left\{c_{1}, \ldots, c_{T-l+1}\right\}$`。
 
 为了提高性能，我们加入了基于池化特征图的高速网络。最后，使用一个全连接层和sigmoid激活输出序列为真的概率。优化目标是最小化真实标签和预测概率的交叉熵。
 
 ## Synthetic Data Experiments
 
-为了测试效率和增加对SeqGAN的理解，我们使用合成数据做了仿真测试。为了模拟真实的结构化序列，我们考虑一个语言模型来捕捉token的依赖。我们使用一个随机初始化的LSTM作为真实模型，也称作先知，为下面的实验生成真实数据分布$p\left(x_{t} | x_{1}, \ldots, x_{t-1}\right)$。
+为了测试效率和增加对SeqGAN的理解，我们使用合成数据做了仿真测试。为了模拟真实的结构化序列，我们考虑一个语言模型来捕捉token的依赖。我们使用一个随机初始化的LSTM作为真实模型，也称作先知，为下面的实验生成真实数据分布`$p\left(x_{t} | x_{1}, \ldots, x_{t-1}\right)$`。
 
 ### Evaluation Metric
 
-有这样一个先知的好处是，首先它提供了训练数据集，其次可以衡量真实的生成模型性能，对于真实数据是不可行的。我们指导最大似然估计会最小化真实数据分布p和我们的近似分布q的交叉熵，例如$-\mathbb{E}_{x \sim p} \log q(x)$。但是最准确的衡量生成模型的方法是从中采样一些样本来人工观察。我们假设观察者已经学到了自然分布$p_{\text { human }}(x)$的准确模型。为了提高通过图灵测试的几率，我们需要最小化完全相反的平均负对数似然$-\mathbb{E}_{x \sim q} \log p_{\text { human }}(x)$。在我们的合成数据实验中，我们可以把先知看做是人工观察者，因此一个完美的衡量标准是：
+有这样一个先知的好处是，首先它提供了训练数据集，其次可以衡量真实的生成模型性能，对于真实数据是不可行的。我们指导最大似然估计会最小化真实数据分布p和我们的近似分布q的交叉熵，例如`$-\mathbb{E}_{x \sim p} \log q(x)$`。但是最准确的衡量生成模型的方法是从中采样一些样本来人工观察。我们假设观察者已经学到了自然分布`$p_{\text { human }}(x)$`的准确模型。为了提高通过图灵测试的几率，我们需要最小化完全相反的平均负对数似然`$-\mathbb{E}_{x \sim q} \log p_{\text { human }}(x)$`。在我们的合成数据实验中，我们可以把先知看做是人工观察者，因此一个完美的衡量标准是：
 
 $$\mathrm{NLL}_{\mathrm{oracle}}=-\mathbb{E}_{Y_{1 : T} \sim G_{\theta}}\left[\sum_{t=1}^{T} \log G_{\mathrm{oracle}}\left(y_{t} | Y_{1 : t-1}\right)\right] \qquad (13)$$
 
@@ -131,7 +131,7 @@ $$\mathrm{NLL}_{\mathrm{oracle}}=-\mathbb{E}_{Y_{1 : T} \sim G_{\theta}}\left[\s
 
 ### Training Setting
 
-为了做合成数据实验，我们首先用正态分布$\mathcal{N}(0,1)$初始化LSTM网络的参数，先知代表真实分布$G_{\text { oracle }}\left(x_{t} | x_{1}, \ldots, x_{t-1}\right)$。我们用它生成10000个长度为20的序列作为生成模型的训练集$\mathcal{S}$。
+为了做合成数据实验，我们首先用正态分布$\mathcal{N}(0,1)$初始化LSTM网络的参数，先知代表真实分布`$G_{\text { oracle }}\left(x_{t} | x_{1}, \ldots, x_{t-1}\right)$`。我们用它生成10000个长度为20的序列作为生成模型的训练集$\mathcal{S}$。
 
 在SeqGAN的算法中，判别器把$\mathcal{S}$中的数据标为1，生成数据标为0。对于不同的任务可以设置不同的卷积层结构，我们的试验中，核大小从1到T，数量在100到200之间。使用dropout和L2作为正则项。
 
