update blog Deep Learning Rules of Thumb

--- a/blog/2019/0405.md
+++ b/blog/2019/0405.md
@@ -8,7 +8,7 @@
 
 ---
 
-来自[Deep Learning](https://jeffmacaluso.github.io/post/DeepLearningRulesOfThumb/)
+来自[Deep Learning Rules of Thumb](https://jeffmacaluso.github.io/post/DeepLearningRulesOfThumb/)
 
 ## TL:DR
 
