--- a/blog/papers/2019/0509.md
+++ b/blog/papers/2019/0509.md
@@ -105,11 +105,15 @@ $$\nabla_{\alpha, w}^{2} \mathcal{L}_{t r a i n}(w, \alpha) \nabla_{w^{\prime}} 
 
 zero运算不保留的原因有两点：第一，每个节点需要保证有k个非0输入边，这样能和现有的模型进行公平对比，第二，zero运算的强度是无法确定的，因为增加zero运算的logits只影响了最终节点表示的尺度，由于BN的存在并不影响最后的分类输出。
 
+![](R/darts-fig2.png)
+
 ## 3 EXPERIMENTS AND RESULTS
 
 在CIFAR10和PTB上的实验包括两个阶段，结构搜索和结构评估。第一阶段，使用DARTS搜索所有结构块，基于验证性能确定最后的块。第二阶段，使用这些块构建大的结构，从头训练在测试集上查看性能。我们也探索了在CIFAR10和PTB上的最好的块在ImageNet和WikiText-2上的表现。
 
 ### 3.1 ARCHITECTURE SEARCH
+
+![](R/darts-fig4-5-6.png)
 
 #### 3.1.1 SEARCHING FOR CONVOLUTIONAL CELLS ON CIFAR-10
 
@@ -118,6 +122,7 @@ zero运算不保留的原因有两点：第一，每个节点需要保证有k个
 【略】
 
 #### 3.1.2 SEARCHING FOR RECURRENT CELLS ON PENN TREEBANK
+
 【略】
 
 ### 3.2 ARCHITECTURE EVALUATION
