--- a/blog/papers/2019/0509.md
+++ b/blog/papers/2019/0509.md
@@ -63,13 +63,13 @@ $$x^{(j)}=\sum_{i<j} o^{(i, j)}\left(x^{(i)}\right) \qquad (1)$$
 
 $$\overline{o}^{(i, j)}(x)=\sum_{o \in \mathcal{O}} \frac{\exp \left(\alpha_{o}^{(i, j)}\right)}{\sum_{o^{\prime} \in \mathcal{O}} \exp \left(\alpha_{o^{\prime}}^{(i, j)}\right)} o(x) \qquad (2)$$
 
-其中节点对$(i, j)$之间运算的权重用向量$\alpha^{(i, j)}$来表示，维度为$\vert O \vert$。结构搜索的任务可以转化为学习一系列连续的变量$\alpha=\left\{\alpha^{(i, j)}\right\}$，如图1。每次搜索结束后，可以得到一个确定的结构，把对应的运算$\overline{O}^{(i, j)}$替换为可能的运算，即$o^{(i, j)}=\operatorname{argmax}_{o \in \mathcal{O}} \alpha_{o}^{(i, j)}$。后面我们把$\alpha$作为结构的表示。
+其中节点对$(i, j)$之间运算的权重用向量$\alpha^{(i, j)}$来表示，维度为$\vert O \vert$。结构搜索的任务可以转化为学习一系列连续的变量$\alpha=\{\alpha^{(i, j)}\}$，如图1。每次搜索结束后，可以得到一个确定的结构，把对应的运算$\overline{O}^{(i, j)}$替换为可能的运算，即$o^{(i, j)}=\operatorname{argmax}_{o \in \mathcal{O}} \alpha_{o}^{(i, j)}$。后面我们把$\alpha$作为结构的表示。
 
 ![](R/darts-fig1.png)
 
 在松弛之后，我们的目标就是同时学习结构$\alpha$和运算的权重$w$。类似于使用RL和演化来做搜索，验证集的性能作为奖励或者适应度，DARTS目标是优化验证集的损失，但是使用的方法是梯度下降。
 
-$\mathcal{L}_{train}$和$\mathcal{L}_{val}$表示训练集和验证集的损失。损失由结构$\alpha$和权重$w$决定。结构搜索的目标是找到$\alpha^{*}$使得验证集损失$\mathcal{L}_{v a l}\left(w^{*}, \alpha^{*}\right)$最小，这里权重$w^{*}$来自于最小化训练损失$w^{*}=\operatorname{argmin}_{w} \mathcal{L}_{t r a i n}\left(w, \alpha^{*}\right)$的结构。
+$\mathcal{L}\_{train}$和$\mathcal{L}\_{val}$表示训练集和验证集的损失。损失由结构$\alpha$和权重$w$决定。结构搜索的目标是找到$\alpha^{*}$使得验证集损失$\mathcal{L}\_{v a l}\left(w^{*}, \alpha^{*}\right)$最小，这里权重$w^{*}$来自于最小化训练损失$w^{*}=\operatorname{argmin}\_{w} \mathcal{L}\_{t r a i n}(w, \alpha^{*})$的结构。
 
 这是个双层优化问题，$\alpha$是上层变量，$w$是下层变量：
 
@@ -81,7 +81,7 @@ $$\min _{\alpha} \mathcal{L}_{v a l}\left(w^{*}(\alpha), \alpha\right) \qquad (3
 
 $$\nabla_{\alpha} \mathcal{L}_{v a l}\left(w^{*}(\alpha), \alpha\right) \qquad (5) \\ \approx \nabla_{\alpha} \mathcal{L}_{v a l}\left(w-\xi \nabla_{w} \mathcal{L}_{\text {train}}(w, \alpha), \alpha\right) \text { , } \alpha ) \qquad (6)$$
 
-其中$w$表示当前算法持有的权重，$\xi$是内部优化一步的学习率。我们的想法是*通过简单一步训练调整$w$来近似$w^{*}(\alpha)$*，不需要训练至收敛来求解内部优化（公式4）。注意公式6在$w$已经是内部优化局部最优的时候变为$\nabla_{\alpha} \mathcal{L}_{v a l}(w, \alpha)$，这时候$\nabla_{w} \mathcal{L}_{t r a i n}(w, \alpha)=0$。
+其中$w$表示当前算法持有的权重，$\xi$是内部优化一步的学习率。我们的想法是**通过简单一步训练调整$w$来近似$w^{*}(\alpha)$**，不需要训练至收敛来求解内部优化（公式4）。注意公式6在$w$已经是内部优化局部最优的时候变为$\nabla \_{\alpha} \mathcal{L}\_{v a l}(w, \alpha)$，这时候$\nabla\_{w} \mathcal{L}\_{t r a i n}(w, \alpha)=0$。
 
 迭代步骤见算法1。虽然还无法确定我们的优化算法能保证收敛，但实践上，选择合适的$\xi$一般都能达到一个确定的点。我们也注意到在权重优化中使用动量的话，公式6中的单步学习目标随之改变，我们的分析依旧成立。
 
@@ -91,7 +91,7 @@ $$\nabla_{\alpha} \mathcal{L}_{v a l}\left(w^{*}(\alpha), \alpha\right) \qquad (
 
 $$\nabla_{\alpha} \mathcal{L}_{v a l}\left(w^{\prime}, \alpha\right)-\xi \nabla_{\alpha, w}^{2} \mathcal{L}_{t r a i n}(w, \alpha) \nabla_{w^{\prime}} \mathcal{L}_{v a l}\left(w^{\prime}, \alpha\right) \qquad (7)$$
 
-其中$w^{\prime}=w-\xi \nabla_{w} \mathcal{L}_{t r a i n}(w, \alpha)$单步前向模型的权重。上式第二项包括一个矩阵-向量乘积，计算较大。但幸运的是，使用有限微分近似可以极大减少复杂度。令$\epsilon$为一个标量值，且$w^{ \pm}=w \pm \epsilon \nabla_{w^{\prime}} \mathcal{L}_{v a l}\left(w^{\prime}, \alpha\right)$，那么：
+其中$w^{\prime}=w-\xi \nabla \_{w} \mathcal{L}\_{t r a i n}(w, \alpha)$单步前向模型的权重。上式第二项包括一个矩阵-向量乘积，计算较大。但幸运的是，使用有限微分近似可以极大减少复杂度。令$\epsilon$为一个标量值，且$w^{ \pm}=w \pm \epsilon \nabla\_{w^{\prime}} \mathcal{L}\_{v a l}\left(w^{\prime}, \alpha\right)$，那么：
 
 $$\nabla_{\alpha, w}^{2} \mathcal{L}_{t r a i n}(w, \alpha) \nabla_{w^{\prime}} \mathcal{L}_{v a l}\left(w^{\prime}, \alpha\right) \approx \frac{\nabla_{\alpha} \mathcal{L}_{t r a i n}\left(w^{+}, \alpha\right)-\nabla_{\alpha} \mathcal{L}_{t r a i n}\left(w^{-}, \alpha\right)}{2 \epsilon} \qquad (8)$$
 
