--- a/blog/papers/2019/0509.md
+++ b/blog/papers/2019/0509.md
@@ -63,13 +63,13 @@ $$x^{(j)}=\sum_{i<j} o^{(i, j)}\left(x^{(i)}\right) \qquad (1)$$
 
 $$\overline{o}^{(i, j)}(x)=\sum_{o \in \mathcal{O}} \frac{\exp \left(\alpha_{o}^{(i, j)}\right)}{\sum_{o^{\prime} \in \mathcal{O}} \exp \left(\alpha_{o^{\prime}}^{(i, j)}\right)} o(x) \qquad (2)$$
 
-其中节点对$(i, j)$之间运算的权重用向量$\alpha^{(i, j)}$来表示，维度为$\vert O \vert$。结构搜索的任务可以转化为学习一系列连续的变量$\alpha=\{\alpha^{(i, j)}\}$，如图1。每次搜索结束后，可以得到一个确定的结构，把对应的运算$\overline{O}^{(i, j)}$替换为可能的运算，即$o^{(i, j)}=\operatorname{argmax}_{o \in \mathcal{O}} \alpha_{o}^{(i, j)}$。后面我们把$\alpha$作为结构的表示。
+其中节点对$(i, j)$之间运算的权重用向量$\alpha^{(i, j)}$来表示，维度为$\vert O \vert$。结构搜索的任务可以转化为学习一系列连续的变量$\alpha=\{\alpha^{(i, j)}\}$，如图1。每次搜索结束后，可以得到一个确定的结构，把对应的运算$\overline{O}^{(i, j)}$替换为可能的运算，即$o^{(i, j)}=\operatorname{argmax}\_{o \in \mathcal{O}} \alpha\_{o}^{(i, j)}$。后面我们把$\alpha$作为结构的表示。
 
 ![](R/darts-fig1.png)
 
 在松弛之后，我们的目标就是同时学习结构$\alpha$和运算的权重$w$。类似于使用RL和演化来做搜索，验证集的性能作为奖励或者适应度，DARTS目标是优化验证集的损失，但是使用的方法是梯度下降。
 
-$\mathcal{L}\_{train}$和$\mathcal{L}\_{val}$表示训练集和验证集的损失。损失由结构$\alpha$和权重$w$决定。结构搜索的目标是找到$\alpha^{*}$使得验证集损失$\mathcal{L}\_{v a l}\left(w^{*}, \alpha^{*}\right)$最小，这里权重$w^{*}$来自于最小化训练损失$w^{*}=\operatorname{argmin}\_{w} \mathcal{L}\_{t r a i n}(w, \alpha^{*})$的结构。
+$\mathcal{L}\_{train}$和$\mathcal{L}\_{val}$表示训练集和验证集的损失。损失由结构$\alpha$和权重$w$决定。结构搜索的目标是找到$\alpha^{\*}$使得验证集损失$\mathcal{L}\_{v a l}\left(w^{\*}, \alpha^{\*}\right)$最小，这里权重$w^{\*}$来自于最小化训练损失$w^{\*}=\operatorname{argmin}\_{w} \mathcal{L}\_{train}(w, \alpha^{\*})$的结构。
 
 这是个双层优化问题，$\alpha$是上层变量，$w$是下层变量：
 
