update dynamic programming

--- a/blog/udacity-deep-rl/20190607.md
+++ b/blog/udacity-deep-rl/20190607.md
@@ -94,7 +94,7 @@ def policy_evaluation(env, policy, gamma=1, theta=1e-8):
     return V
 ```
 
-对于均等概率进行测试，即$\pi(a|s) = \frac{1}{|\mathcal{A}(s)|}$：
+对于均等概率进行测试，即$\pi(a \vert s) = \frac{1}{\vert \mathcal{A}(s) \vert}$：
 
 ``` python
 random_policy = np.ones([env.nS, env.nA]) / env.nA
