--- a/blog/papers/2019/0712.md
+++ b/blog/papers/2019/0712.md
@@ -45,15 +45,15 @@
 ## 3. Method
 ### 3.1. Problem Formulation
 
-视频修补旨在填充视频帧$X_{1}^{T} :=\left\{X_{1}, X_{2}, \ldots, X_{T}\right\}$任意缺失区域。重构的区域应该尽量和真实帧$Y_{1}^{T} :=\left\{Y_{1}, Y_{2}, \ldots, Y_{T}\right\}$一致，同时在时空上一致。我们把视频修补问题写作一个从$X_{1}^{T}$到输出$\hat{Y}_{1}^{T} :=\left\{\hat{Y}_{1}, \hat{Y}_{2}, \ldots, \hat{Y}_{T}\right\}$的映射函数，使得条件分布$p\left(\hat{Y}_{1}^{T} | X_{1}^{T}\right)$与$p\left(Y_{1}^{T} | X_{1}^{T}\right)$一致。通过吻合条件分布，网络可以学习生成真实的，时间一致的输出序列。为了简化问题，我们做了马尔科夫假设，把条件分布写为乘积形式，这样，原始的一帧一帧修补可以写作：
+视频修补旨在填充视频帧$X _ {1}^{T} :=\left\{X_ {1}, X _ {2}, \ldots, X _ {T}\right\}$任意缺失区域。重构的区域应该尽量和真实帧$Y_ {1}^{T} :=\left\{Y_ {1}, Y_ {2}, \ldots, Y _ {T}\right\}$一致，同时在时空上一致。我们把视频修补问题写作一个从$X _{1}^{T}$到输出$\hat{Y} _ {1}^{T} :=\left\{\hat{Y} _ {1}, \hat{Y} _ {2}, \ldots, \hat{Y} _ {T}\right\}$的映射函数，使得条件分布$p\left(\hat{Y} _ {1}^{T} \vert X _ {1}^{T}\right)$与$p\left(Y _ {1}^{T} \vert X _ {1}^{T}\right)$一致。通过吻合条件分布，网络可以学习生成真实的，时间一致的输出序列。为了简化问题，我们做了马尔科夫假设，把条件分布写为乘积形式，这样，原始的一帧一帧修补可以写作：
 
 $$p\left(\hat{Y}_{1}^{T} | X_{1}^{T}\right)=\prod_{t=1}^{T} p\left(\hat{Y}_{t} | X_{t}\right) \qquad (1)$$
 
-但是，为了获得更好的视觉效果，我们认为生成的第t帧$\hat{Y}_{t}$应该和：1）时空邻近帧$X_{t-N}^{t+N}$，2）生成的前一帧$\hat{Y}_{t-1}$一致，3）编码过的历史记忆$M_{t}$一致，因此，我们提出了条件概率：
+但是，为了获得更好的视觉效果，我们认为生成的第t帧$\hat{Y} _ {t}$应该和：1）时空邻近帧$X _ {t-N}^{t+N}$，2）生成的前一帧$\hat{Y} _ {t-1}$一致，3）编码过的历史记忆$M _ {t}$一致，因此，我们提出了条件概率：
 
 $$p\left(\hat{Y}_{1}^{T} | X_{1}^{T}\right)=\prod_{t=1}^{T} p\left(\hat{Y}_{t} | X_{t-N}^{t+N}, \hat{Y}_{t-1}, M_{t}\right) \qquad (2)$$
 
-实验中，我们设置N为2，利用两个前两个后帧来恢复当前帧。我们使用时间步长为3来采样帧，$X_{t-N}^{t+N} :=\left\{X_{t-6}, X_{t-3}, X_{t}, X_{t+3}, X_{t+6}\right\}$。通过自回归的函数D获得最终输出$\hat{Y}_{1}^{T}$
+实验中，我们设置N为2，利用两个前两个后帧来恢复当前帧。我们使用时间步长为3来采样帧，$X _ {t-N}^{t+N} :=\left\{X _ {t-6}, X _ {t-3}, X _ {t}, X _ {t+3}, X _ {t+6}\right\}$。通过自回归的函数D获得最终输出$\hat{Y} _ {1}^{T}$
 
 ### 3.2. Network Design
 
